--- a/web/src/components/signup/index.css
+++ b/web/src/components/signup/index.css
@@ -43,7 +43,7 @@ button{
     flex-wrap: wrap;
     width: 80%;
     margin: auto;
-    justify-content: space-between;
+    /* justify-content: space-between; */
    
 }
 .user{
@@ -63,6 +63,13 @@ button{
     box-shadow: 0px -1px 6px 5px #d1cece;
     cursor: pointer;
 }
+
+@media only screen and (max-width: 500px) {
+    .form {
+      width:100%;
+      
+    }
+  }
 
 
 
